AWCReporingApplication/force-app/main/default/objects/Expense_Report__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Expense_Reports</relationshipLabel>
    <relationshipName>Expense_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>