AWCReporingApplication/force-app/main/default/objects/Expense_Report__c/fields/Total_Accommodation_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Accommodation_Expenses__c</fullName>
    <label>Total Accommodation Expenses</label>
    <summarizedField>Accommodation__c.Amount__c</summarizedField>
    <summaryForeignKey>Accommodation__c.Expense_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>