AWCReporingApplication/force-app/main/default/objects/Expense_Report__c/fields/Total_Food_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Food_Expenses__c</fullName>
    <label>Total Food Expenses</label>
    <summarizedField>Food__c.Amount__c</summarizedField>
    <summaryForeignKey>Food__c.Expense_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>