AWCReporingApplication/force-app/main/default/objects/Expense_Report__c/fields/Total_Transportation_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Transportation_Expenses__c</fullName>
    <label>Total Transportation Expenses</label>
    <summarizedField>Transportation__c.Amount__c</summarizedField>
    <summaryForeignKey>Transportation__c.Expense_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>