AWCReporingApplication/force-app/main/default/objects/Expense_Report__c/recordTypes/Expense_Types.recordType-meta.xml
<RecordType>
    <fullName>Expense_Types</fullName>
    <active>false</active>
    <description>Three Expense types record types</description>
    <label>Expense Types</label>
</RecordType>