AWCReporingApplication/force-app/main/default/objects/Expense_Report__c/recordTypes/Status.recordType-meta.xml
<RecordType>
    <fullName>Status</fullName>
    <active>true</active>
    <label>Status</label>
</RecordType>