AWCReporingApplication/force-app/main/default/objects/Expense_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Purpose_of_Trip__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Status__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>