AWCReporingApplication/force-app/main/default/objects/Expense_Report__c/listViews/Expense_Processing_Team_Expense_Report.listView-meta.xml
<ListView>
    <fullName>Expense_Processing_Team_Expense_Report</fullName>
    <filterScope>Queue</filterScope>
    <label>Expense Processing Team</label>
    <queue>Expense_Processing_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>